--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,462 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500;600;700&family=Josefin+Slab:wght@500;600;700&family=Poppins:wght@400;500;600;700;800;900&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  text-transform: capitalize
+}
+body {
+  width: 100%;
+  background: #111122;
+
+  color: white;
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
+::selection {
+  background-color: #583fad;
+  color: black;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main{
+  width: 100%;
+  min-height: calc(100vh-250px);
 }
+
+/* Header */
+.hero {
+}
+
+header {
+  width: 100%;
+  background: white;
+}
+nav {
+  width: 95%;
+  height: 80px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  user-select: none;
+}
+nav .logo {
+  font-family: "Josefin Sans", sans-serif;
+  color: black;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+nav .menu-lists {
+  font-family: "Poppins", sans-serif;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav .menu-lists li {
+  padding: 5px 15px;
+  color: #343c4f;
+  font-weight: 700;
+  cursor: pointer;
+  margin: 3px;
+  letter-spacing: 0.5px;
+}
+nav .menu-lists li:is(:hover, .active) {
+  color: grey;
+  transition: all ease 0.3s;
+}
+
+nav :is(.fa-bars, .fa-xmark) {
+  color: #000;
+  display: none;
+}
+
+/* posts > css for posts conponentss */
+
+.blog-head h1 {
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 700;
+}
+.posts-container {
+  font-family: "Poppins", sans-serif;
+  width: 95%;
+  margin: 120px auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 10px;
+  font-weight: 400;
+}
+
+.posts-box {
+  width: 100%;
+  padding: 40px 0;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.5);
+}
+.posts-img {
+  width: 100%;
+  height: 185px;
+  overflow: hidden;
+  position: relative;
+}
+.posts-img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.posts-img:hover img {
+  transition: all 1s linear;
+  filter: invert(1);
+}
+.posts-img .categories {
+  position: absolute;
+  left: 0;
+  top: 10px;
+  display: flex;
+  gap: 5px;
+}
+
+.posts-img .categories .category {
+  padding: 2px 10px;
+  font-size: 0.9rem;
+  color: #fff;
+}
+.posts-text h3 {
+  font-size: 1.3rem;
+  text-transform: capitalize;
+  color: #ffffff;
+  font-weight: 500;
+  margin: 5px 0;
+  line-height: 25px;
+  transition: all 0.3s linear;
+}
+.posts-text h3:hover {
+  color: grey;
+}
+.posts-text .category-time {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 0.9rem;
+  margin-top: 5px;
+  font-weight: 500;
+}
+
+.posts-text .category-time .published-time {
+  color: rgb(172, 166, 166);
+}
+
+.posts-text .excerpt {
+  font-size: 0.9rem;
+  color: #008080;
+}
+
+/* search component */
+
+.search {
+  width: 95%;
+  margin: 20px auto;
+  height: 50px;
+  background: #111122;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  font-family: poppins, "sans-serif";
+}
+.search input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border-left: 1px solid white;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  background: transparent;
+  padding: 0 20px;
+  font-size: 0.95;
+  color: white;
+}
+
+.search button {
+  outline: none;
+  border: none;
+  background: #9013fe;
+  border: 1px solid white;
+  width: 80px;
+  height: inherit;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+  cursor: pointer;
+}
+
+/*  article container css  */
+.post-container {
+  width: 95%;
+  margin: 0 auto;
+}
+.post-container article .title {
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.post-container article .published-time {
+  text-align: center;
+  margin: bottom 20px;
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: #008080;
+}
+.post-container article .published-time i {
+  margin-right: 7px;
+}
+.post-container article .content {
+  margin-bottom: 20px;
+}
+.post-container article .content :is(img, video) {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin: 10px 0px;
+}
+
+.post-container article .content p {
+  line-height: 1.8rem;
+  margin: 10px 0;
+}
+.post-container article .content :is(h1, h2, h3, h4, h5, h6) {
+  line-height: 1.8rem;
+  margin: 10px 0;
+}
+
+/* comments css */
+
+.comments {
+  margin-top: 50px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+.comments h2 {
+  color: #4b6cb7;
+  padding: 5px 0;
+}
+.comments form :is(input, textarea) {
+  width: 100%;
+  border: none;
+  outline: none;
+  background-color: #ffffff;
+  color: black;
+  font-weight: bold;
+  padding: 10px 20px;
+  font-size: 0.95rem;
+  margin: 10px 0px;
+  resize: none;
+}
+
+.comments form input {
+  height: 50px;
+}
+.comments form .check {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.comments form .check input[type="checkbox"] {
+  width: 25px;
+  height: 25px;
+}
+.comments form button {
+  display: block;
+  border: none;
+  outline: none;
+  background: #4b6cb7;
+  padding: 10px 30px;
+  color: white;
+  font-weight: 600;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+.comments .content {
+  margin-top: 20px;
+  background: #4b6cb7;
+  color: white;
+  border-radius: 5px;
+  padding: 10px 20px;
+
+}
+
+.comments .content i{
+  margin-right: 5px;
+}
+
+.comments .content p{
+  color: #ddd;
+  font-size: 0.9rem;
+  margin-top: 3px;
+  
+}
+
+/*  css for pagination  */
+
+.pagination{
+  width: 95%;
+  margin: 25px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  user-select: none;
+  
+}
+.pagination .prev-next{
+text-transform: capitalize;
+cursor: pointer;
+color: #fff;
+font-weight: 500;
+transform: all 0.3s linear;
+
+
+}
+.pagination .prev-next i{
+  font-size: 0.85rem;
+}
+.pagination .numbers{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  cursor: pointer;
+
+}
+.pagination .numbers li{
+  color: white;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s linear;
+  
+}
+.pagination .numbers li:is(:hover,.active){
+  background: #583fad;
+  color: white;
+  
+
+}
+
+
+/*  css for footer */
+
+footer{
+  background-color: #0E172B;
+  width: 100%;
+  min-height: 70px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  justify-items: center;
+  border-top: 1px solid rgba(199, 182, 182, 0.5);
+  margin-top: 10px;
+
+}
+footer span{
+  font-size: 1rem;
+  letter-spacing: 1px;
+  font-weight: 500;
+  margin: 10px;
+
+}
+footer .author{
+  color: white;
+
+}
+.footer-social{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  margin: 8px;
+
+}
+
+.footer-social a{
+  width: 35px;
+  height: 35px;
+  color: #8893ae; 
+  display: flex;
+  justify-content: center;
+  
+
+}
+
+.footer-social a:hover{
+  color: crimson;
+  transition: all 0.5 ease;
+}
+
+
+
+/*  Making the website responsive  */
+
+@media (max-width : 750px){
+  nav .fa-bars{
+    display: block;
+  }
+  nav .menu-lists{
+    position: fixed;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: white;
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    font-size: 1.2rem;
+    overflow-y: scroll;
+  }
+  nav .fa-xmark{
+    display: block;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  header #menu-btn:checked ~ nav .menu-lists{
+display: flex;
+  }
+}
+
+
+@media (max-width : 400px){
+    .posts-container{
+      grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+    }
+}
+
+/*  */
