--- a/src/index.css
+++ b/src/index.css
@@ -395,6 +395,7 @@ footer span{
 footer .author{
   color: white;
   font-family: "Josefin Sans", sans-serif;
+  font-weight:700;
 
 }
 .footer-social{
